1.0.0
    Fix design problems with vehicles and devices in right panel
    Fix properly closing campaigns
    Fix Non characters can't now connect to matrix
    Fix loaded portraits are now properly scaled
    Fix weather combo box insufficient size
    Fix Fixed New Battle dialog design issues
    Fix right panel sometimes didn't show up
    Added several new tooltips
    Added vehicles now have custom presets
    Added background noise with presets
    Added last used attributes will be used in dialogs (mostly names of objects)
    Added barriers now have extra name and mandatory preset
    Added roll dice button to ICe dialog

0.2.2
    Fixed opening savefiles
    Fixed showing Spirit index to NPCs
    Refactored dialogs, optimizations and bugfixes

0.2.1
    Turn keys are now colored, with hotkeys (CTRL + LEFT/RIGHT).
    New application icon
    Several styling fixes
    Several NpE bugfixes
    Master table will now properly update
    New initiative dialog have now option to apply wound modifier